--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -39,7 +39,7 @@
                             </form>
                         {% endif %}
                         {% else %}
-                        <a href="{% url 'login' %}"><button type="submit" class='text-center py-4 text-xs'><i class="fa-regular fa-heart  text-orange-600 w-6 h-6 "></i><br>complaint</button></a>
+                        <a href="{% url 'login' %}"><button type="submit" class='text-center py-4 text-xs'><i class="fa-regular fa-flag  text-blue-500 w-6 h-6 "></i><br>complaint</button></a>
                         {% endif %}
                             
                     </div>
