Landing Page Added

--- a/manager/templates/Manager/Flags.html
+++ b/manager/templates/Manager/Flags.html
@@ -14,9 +14,9 @@
                         <video controls autoplay-off class='w-full my-[0%]'>
                             <source src="/media/{{item.video.video}}" type='video/mp4'>
                         </video>
-                        <div class='grid grid-cols-4 text-right my-4 rounded-lg bg-green-950  p-2 gap-1'>
+                        <div class='grid grid-cols-4 text-right my-4 rounded-lg bg-emerald-800  p-2 gap-1'>
                                 <div class=' col-span-1'>
-                                    <a href="{% url 'item-delete-page' item.video.id %}"><button type="submit" class='text-center text-xs'><i class="fa-regular fa-trash-can  text-blue-300 w-6 h-6 "></i><br>Delete Your Post</button></a>
+                                    <a href="{% url 'item-delete-page' item.video.id %}"><button type="submit" class='text-center text-xs'><i class="fa-regular fa-trash-can  text-blue-300 w-6 h-6 "></i><br>Delete This Post</button></a>
                                 </div>
                                 <div class='col-span-1'></div>
                                 <div class=' col-span-1'>
