--- a/my_bootcamp/templates/ItemDelete/ItemDelete.html
+++ b/my_bootcamp/templates/ItemDelete/ItemDelete.html
@@ -20,7 +20,7 @@
                         <a href="{% url "delete-file" item.id %}"><button type="submit"name='delete' value={{item.id}} class='text-center text-xs'><i class="fa-regular fa-trash-can  text-blue-300 w-6 h-6 "></i><br>Delete Your Post</button></a>
                     </form>
                 </div>
-            {% elif user.is_authenticated and user.username == 'akhil' and user.email == 'mmakhil989@gmail.com'  %}
+            {% elif user.is_authenticated and delete == 1 %}
                 <div class=' col-span-1 px-2 text-left'>
                     <form action="" method='post' enctype="multipart/form-data">
                         {% csrf_token %}
