--- a/my_bootcamp/templates/Footer/Footer.html
+++ b/my_bootcamp/templates/Footer/Footer.html
@@ -26,7 +26,9 @@
     <div class='flex-1  mb-6 mt-1 py-6 text-center'>
         <div class='grid grid-cols-4'>
             <div class=''><i class="fa-brands fa-square-facebook text-blue-500 w-12 h-12"></i></div>
-            <div class=''><i class="fa-brands fa-whatsapp text-green-500 w-12 h-12"></i></div>
+            <a href="https://wa.me/1234567890" target="_blank">
+                <i class="fa-brands fa-whatsapp text-green-500 w-12 h-12"></i>
+            </a>
             <div class=''><i class="fa-brands fa-youtube text-red-500 w-12 h-12"></i></div>
             <div class=''><i class="fa-brands fa-instagram text-rose-600 w-12 h-12"></i></div>
         </div>
