--- a/my_bootcamp/templates/NavBar/NavBar.html
+++ b/my_bootcamp/templates/NavBar/NavBar.html
@@ -35,7 +35,7 @@
            </form>
         </div> 
         <div  class='mx-2  hidden lg:flex xl:flex 2xl:flex hover:text-slate-200 items-center justify-center text-2xl bg-clip-text text-transparent bg-gradient-to-r  from-orange-700 via-indigo-500 to-blue-500'>
-            <a href="{% url "tutor-home" %}">
+            <a href="{% url "join-now" %}">
             Start Tutoring
             </a>
         </div> 
