--- a/my_bootcamp/templates/Home/Home.html
+++ b/my_bootcamp/templates/Home/Home.html
@@ -9,7 +9,7 @@
         {% endif %}
         <ul class='my-2 p-2'>
            
-            <div class='bg-slate-800  grid md:grid-cols-2 gap-2 p-2 h-full'>
+            <div class='  grid md:grid-cols-2 gap-2 p-2 h-full'>
                 <div class='p-2 col-span-1 rounded-lg bg-black'>
                 <div class='h-12 my-1'>
                 <h3 class='font-bold text-lg text-gray-300 text-ellipsis overflow-x-scroll no-scrollbar'>{{item.title|capfirst}}</h3>
